<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="20dp"/>

    <TextView
        android:id="@+id/tv_making_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:text="개인 정보 수정"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sign_up_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toBottomOf="@id/tv_making_sign_up"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_center1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="160dp" />

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="12sp"
            android:text="@string/sign_up_name"/>

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guide_center1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:background="@null"
            android:hint="김태정"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sign_up_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toBottomOf="@id/cl_sign_up_name"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_center2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="160dp" />

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sign_up_id"/>

        <EditText
            android:id="@+id/et_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@id/guide_center2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:hint="tae0803"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sign_up_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toBottomOf="@id/cl_sign_up_id"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_center3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="160dp" />

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:text="@string/sign_up_google"/>

        <EditText
            android:id="@+id/et_user_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guide_center3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:background="@null"
            android:hint="tae0803@gmail.com"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sign_up_pswd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toBottomOf="@id/cl_sign_up_google"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_center4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="160dp"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:text="@string/sign_up_password"/>

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@id/guide_center4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:hint="12341234"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sign_up_pswd_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toBottomOf="@id/cl_sign_up_pswd"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_center5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="160dp" />

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:text="@string/sign_up_password_ok"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@id/guide_center5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp"
            android:hint="12341234"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="수정 완료"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        android:background="@drawable/button_1"/>

</androidx.constraintlayout.widget.ConstraintLayout>